chore: added jbang wrappers and updated README