@@ -7,3 +7,9 @@ A minimal terminal library.
 ```bash
 ./mvnw clean install
 ```
+
+## Running examples
+
+```bash
+./jbang --java 22+ -R--enable-native-access=ALL-UNNAMED --cp target/miniterm-*.jar src/test/java/examples/TerminalSize.java
+```
